# c_plus_plus_raii_pattern

./: CMakeLists.txt  LICENSE  README.md
include/: safe_thread.hpp
src/: main.cc  safe_thread.cc
